--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "compile": "npx tsc",
     "start": "node ./dist/server.js",
     "ingest": "npx ts-node src/scripts/ingest.ts",
+    "ingest-juridico": "npx ts-node ./src/scripts/juridico/ingest-juridico-data.ts",
     "test": "jest"
   },
   "keywords": [],
