--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node ./dist/server.js",
     "ingest": "npx ts-node src/scripts/ingest.ts",
     "ingest-juridico": "npx ts-node ./src/scripts/juridico/ingest-juridico-data.ts",
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
