--- a/Dockerfile-development
+++ b/Dockerfile-development
@@ -20,4 +20,4 @@ RUN npm run build
 EXPOSE 3080
 
 # Comando para iniciar a aplicação já compilada
-CMD ["node", "dist/index.js"]
+CMD ["npm", "start"]
